--- a/index.html
+++ b/index.html
@@ -1,76 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="charset" http-equiv="content-type" content="utf8" />
+    <meta
+      name="keywords"
+      content="council, columbus, knights, fraternal, organisation, volunteer, catholic"
+    />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta name="charset" http-equiv="content-type" content="utf8">
-    <meta name="keywords" content="council, columbus, knights, fraternal, organisation, volunteer, catholic"/>
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/style.css" />
     <script type="module" src="/main.js"></script>
 
     <title>Knights of Columbus Council</title>
 
     <script>
-        /**
-         * @function select
-         * @param {number} index
-         * @returns void
-         */
-        const select = (index) => {
-            const heroCards = document.querySelectorAll("hero-card")
-            heroCards.forEach((card, i) => {
-                card.style.setProperty("--offset", "" + -1 * (index - 1 - i))
-                if (i === index - 1) {
-                    card.dataset.selected = "true";
-                }
-            });
-        }
+      /**
+       * Select a hero card, centre it on the screen, and rotate other cards around it.
+       * @function select
+       * @param {number} index
+       * @returns void
+       */
+      const select = (index) => {
+        const heroCards = document.querySelectorAll("hero-card");
+        heroCards.forEach((card, i) => {
+          card.style.setProperty("--offset", "" + -1 * (index - 1 - i));
+          if (i === index - 1) {
+            card.dataset.selected = "true";
+          } else {
+            card.dataset.selected = "false";
+          }
+        });
+      };
     </script>
-</head>
+  </head>
 
-<body>
-<header>
-    <h1>Knights of Columbus</h1>
-</header>
-<main>
-    <hero-card onclick="select(1)" style="--offset: -2">
-        <img slot="hero" alt="Hero image" src="https://placehold.co/256/svg" style="
-                        border-top-left-radius: 6px;
-                        border-top-right-radius: 6px;
-                    "/>
+  <body>
+    <header>
+      <h1>Knights of Columbus</h1>
+    </header>
+    <main>
+      <hero-card onclick="select(1)" style="--offset: -2">
+        <img
+          slot="hero"
+          alt="Hero image"
+          src="https://placehold.co/256/svg"
+          style="border-top-left-radius: 6px; border-top-right-radius: 6px"
+        />
         <p slot="text">Leftmost</p>
-    </hero-card>
-    <hero-card onclick="select(2)" style="--offset: -1">
-        <img slot="hero" alt="Hero image" src="https://placehold.co/256/svg" style="
-                        border-top-left-radius: 6px;
-                        border-top-right-radius: 6px;
-                    "/>
+      </hero-card>
+      <hero-card onclick="select(2)" style="--offset: -1">
+        <img
+          slot="hero"
+          alt="Hero image"
+          src="https://placehold.co/256/svg"
+          style="border-top-left-radius: 6px; border-top-right-radius: 6px"
+        />
         <p slot="text">Left</p>
-    </hero-card>
-    <hero-card onclick="select(3)" style="--offset: 0">
-        <img slot="hero" alt="Hero image" src="https://placehold.co/256/svg" style="
-                        border-top-left-radius: 6px;
-                        border-top-right-radius: 6px;
-                    "/>
+      </hero-card>
+      <hero-card onclick="select(3)" style="--offset: 0" data-selected="true">
+        <img
+          slot="hero"
+          alt="Hero image"
+          src="https://placehold.co/256/svg"
+          style="border-top-left-radius: 6px; border-top-right-radius: 6px"
+        />
         <p slot="text">Centre</p>
-    </hero-card>
-    <hero-card onclick="select(4)" style="--offset: 1">
-        <img slot="hero" alt="Hero image" src="https://placehold.co/256/svg" style="
-                        border-top-left-radius: 6px;
-                        border-top-right-radius: 6px;
-                    "/>
+      </hero-card>
+      <hero-card onclick="select(4)" style="--offset: 1">
+        <img
+          slot="hero"
+          alt="Hero image"
+          src="https://placehold.co/256/svg"
+          style="border-top-left-radius: 6px; border-top-right-radius: 6px"
+        />
         <p slot="text">Right</p>
-    </hero-card>
-    <hero-card onclick="select(5)" style="--offset: 2">
-        <img slot="hero" alt="Hero image" src="https://placehold.co/256/svg" style="
-                        border-top-left-radius: 6px;
-                        border-top-right-radius: 6px;
-                    "/>
+      </hero-card>
+      <hero-card onclick="select(5)" style="--offset: 2">
+        <img
+          slot="hero"
+          alt="Hero image"
+          src="https://placehold.co/256/svg"
+          style="border-top-left-radius: 6px; border-top-right-radius: 6px"
+        />
         <p slot="text">Rightmost</p>
-    </hero-card>
-</main>
-</body>
-
+      </hero-card>
+    </main>
+  </body>
 </html>
